add: register driver on app manager
